Issue #19 - 1st sonarcloud fix